<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.dcasm.calc20.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_height="40dp"
        android:textAlignment="textEnd" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/input"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="viewEnd"
        android:enabled="false" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/input"
        >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:text="@string/bMC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btnMC"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"
                android:textSize="18sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btnMR"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/bMR" />

            <Button
                android:text="@string/bC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btnC"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"
                android:textSize="18sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btnCE"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"
                android:foregroundTint="?attr/colorControlNormal"
                android:foregroundGravity="center"
                android:text="@string/bCE"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:text="sin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btnSin"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAllCaps="false" />

            <Button
                android:text="cos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btnCos"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAllCaps="false" />

            <Button
                android:text="tan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/brnTan"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAllCaps="false" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btnSqr"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAllCaps="false" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btnRms"
                android:text="@string/bRms"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAllCaps="false" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:text="@string/b7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btn7"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="28sp" />

            <Button
                android:text="@string/b8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btn8"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="28sp" />

            <Button
                android:text="@string/b9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btn9"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="28sp" />

            <Button
                android:text="@string/bDiv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btnDiv"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:text="@string/b4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btn4"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="28sp" />

            <Button
                android:text="@string/b5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btn5"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="28sp" />

            <Button
                android:text="@string/b6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btn6"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="28sp" />

            <Button
                android:text="@string/bMult"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btnMult"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:text="@string/b1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btn1"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="28sp" />

            <Button
                android:text="@string/b2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btn2"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="28sp" />

            <Button
                android:text="@string/b3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btn3"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="28sp" />

            <Button
                android:text="@string/bMinus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btnMin"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textAlignment="center"
                android:fontFamily="sans-serif-medium" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:text="@string/bComma"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btnComma"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="28sp" />

            <Button
                android:text="@string/b0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btn0"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="28sp" />

            <Button
                android:text="@string/bRes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btnRes"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"
                android:textSize="28sp" />

            <Button
                android:text="@string/bPlus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btnPlus"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>
</RelativeLayout>
